[package]
name = "aqy-graphql-client-build"
version = "0.0.7"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/aqy-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Aqy GraphQL RPC Client for the Aqy Blockchain"

[dependencies]
cynic-codegen = "3.7.3"
