[package]
name = "aqy-transaction-builder"
version = "0.0.7"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2021"
description = "Transaction API for the Rust SDK for the Aqy Blockchain"

[dependencies]
base64ct = { version = "1.6", features = ["std"] }
bcs = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.9", default-features = false, features = ["alloc"] }
aqy-types = { package = "aqy-sdk-types", version = "0.0.7", path = "../aqy-sdk-types", features = ["serde", "hash"] }
thiserror = "2.0"
serde_json = { version = "1.0.128" }

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
aqy-crypto = { package = "aqy-crypto", path = "../aqy-crypto" , features = ["ed25519"] }
aqy-graphql-client = { package = "aqy-graphql-client", path = "../aqy-graphql-client" }
aqy-types = { package = "aqy-sdk-types", path = "../aqy-sdk-types", features = ["rand"] }
tokio = { version = "1.0", features = ["full"] }
